# Agent-Studio

./: .gitignore  LICENSE  PLAN.md  README.md
backend/: README.md  pyproject.toml  requirements.txt
backend/linux_sandbox/: Makefile  README.md  codex-linux-sandbox.c
backend/src/agent_studio_backend/: agent_spec.py  api.py  db.py  guardrails.py  llm_providers.py  main.py  models.py  schemas.py  settings.py  validation.py
backend/src/agent_studio_backend/nodes/: __init__.py  agent.py  agent_runtime.py  base.py  input.py  loop.py  loop_group.py  output.py  registry.py  runtime.py  tool.py
backend/src/agent_studio_backend/sandbox_profiles/: network_allowed.sbpl  workspace_write.sbpl
backend/src/agent_studio_backend/services/: code_tools.py  compiler.py  event_bus.py  executor.py  process_manager.py  revisions.py  runs.py  sandbox.py  screenshot.py  shell_tools.py  workflows.py  workspace_tools.py
backend/src/agent_studio_backend/utils/: expressions.py  hashing.py
desktop/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
desktop/electron/: main.mjs  preload.cjs  preload.mjs
desktop/python/: README.md
desktop/src/: App.css  App.tsx  vite-env.d.ts
desktop/src-tauri/: tauri.conf.json
desktop/src-tauri/src/: lib.rs
desktop/src/components/: Button.tsx  Card.tsx  Field.tsx  Metric.tsx  NavItem.tsx  NodeInspector.tsx  TraceViewer.tsx  UndoRedo.tsx
desktop/src/lib/: api.ts  constants.ts  diff.ts  json.ts  llm.ts  storage.ts  types.ts  utils.ts
desktop/src/pages/: AgentEditorPage.tsx  AgentRunnerPage.tsx  DashboardPage.tsx  (+1 more)
